--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,6 @@
     <mule.version>3.7.0</mule.version>
     <spring.version>4.3.14.RELEASE</spring.version>
     <spring-boot.version>1.5.10.RELEASE</spring-boot.version>
-    <tomcat.version>8.5.27</tomcat.version>
     <!-- Plugin versions -->
     <maven-antrun-plugin.version>1.8</maven-antrun-plugin.version>
     <maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
@@ -761,98 +760,6 @@
           <groupId>org.apache.tomcat.maven</groupId>
           <artifactId>tomcat7-maven-plugin</artifactId>
           <version>2.2</version>
-          <dependencies>
-            <dependency>
-              <groupId>org.apache.tomcat.embed</groupId>
-              <artifactId>tomcat-embed-core</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.tomcat</groupId>
-              <artifactId>tomcat-util</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.tomcat</groupId>
-              <artifactId>tomcat-coyote</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.tomcat</groupId>
-              <artifactId>tomcat-api</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.tomcat</groupId>
-              <artifactId>tomcat-jdbc</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.tomcat</groupId>
-              <artifactId>tomcat-dbcp</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.tomcat</groupId>
-              <artifactId>tomcat-servlet-api</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.tomcat</groupId>
-              <artifactId>tomcat-jsp-api</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.tomcat</groupId>
-              <artifactId>tomcat-jasper</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.tomcat</groupId>
-              <artifactId>tomcat-jasper-el</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.tomcat</groupId>
-              <artifactId>tomcat-el-api</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.tomcat</groupId>
-              <artifactId>tomcat-catalina</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.tomcat</groupId>
-              <artifactId>tomcat-tribes</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.tomcat</groupId>
-              <artifactId>tomcat-catalina-ha</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.tomcat</groupId>
-              <artifactId>tomcat-annotations-api</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.tomcat</groupId>
-              <artifactId>tomcat-juli</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.tomcat.embed</groupId>
-              <artifactId>tomcat-embed-logging-juli</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.tomcat.embed</groupId>
-              <artifactId>tomcat-embed-logging-log4j</artifactId>
-              <version>${tomcat.version}</version>
-            </dependency>
-          </dependencies>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -1145,7 +1052,7 @@
       </build>
     </profile>
     <profile>
-      <!-- Profile used by the start-rest.sh script to build the Explorer
+      <!-- Profile used by the start-rest.sh script to build the ReST
         webapp and all its dependencies -->
       <id>buildRestappDependencies</id>
       <modules>
@@ -1160,6 +1067,7 @@
         <module>modules/activiti-secure-service-tasks</module>
         <module>modules/activiti-spring</module>
         <module>modules/activiti-common-rest</module>
+        <module>modules/activiti-simple-workflow</module>
         <module>modules/activiti-rest</module>
       </modules>
       <properties>
