--- a/activiti-api-web-example/pom.xml
+++ b/activiti-api-web-example/pom.xml
@@ -38,14 +38,14 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
-    <activiti.version>7.0.25</activiti.version>
+    <activiti-dependencies.version>7.0.25</activiti-dependencies.version>
   </properties>
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.activiti</groupId>
         <artifactId>activiti-dependencies</artifactId>
-        <version>${activiti.version}</version>
+        <version>${activiti-dependencies.version}</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
