--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
     <!-- This duplicates activiti-api-dependencies module but we can't import that module here as this is its parent-->
     <dependencies>
       <dependency>
+        <groupId>org.activiti.build</groupId>
+        <artifactId>activiti-dependencies-parent</artifactId>
+        <version>${activiti-build.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.activiti.api</groupId>
         <artifactId>activiti-api-model-shared</artifactId>
         <version>${activiti-api.version}</version>
@@ -77,7 +82,7 @@
     <java.version>1.8</java.version>
     <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
     <activiti-api.version>${project.version}</activiti-api.version>
-    <activiti-build.version>7.0.23</activiti-build.version>
+    <activiti-build.version>7.0.31</activiti-build.version>
   </properties>
   <build>
     <plugins>
