--- a/.mergify.yml
+++ b/.mergify.yml
@@ -11,3 +11,17 @@ pull_request_rules:
       merge:
         method: squash
         strict: true
+  - name: automatic merge when CI passes and 1 approving reviews and label ready-to-merge
+    conditions:
+      - "#approved-reviews-by>=1"
+      - status-success=continuous-integration/jenkins/pr-head
+      - status-success=continuous-integration/travis-ci/pr
+      - status-success=continuous-integration/travis-ci/push
+      - status-success=license/cla
+      - base=develop
+      - label=ready-to-merge
+    actions:
+      delete_head_branch: {}
+      merge:
+        method: squash
+        strict: true
