--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,12 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.activiti.build</groupId>
+    <artifactId>activiti-parent</artifactId>
+    <version>7.0.41</version>
+    <relativePath/>
+  </parent>
   
   <groupId>org.activiti.dependencies</groupId>
   <artifactId>activiti-dependencies-parent</artifactId>
