--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -8,3 +8,6 @@ github:
       branch: develop      
     - name: activiti
       branch: develop
+    - name: activiti-dependencies
+      branch: develop
+      useSinglePullRequest: true
