--- a/activiti-spring-process-extensions/pom.xml
+++ b/activiti-spring-process-extensions/pom.xml
@@ -3,9 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>activiti-root</artifactId>
         <groupId>org.activiti</groupId>
+        <artifactId>activiti-core-dependencies</artifactId>
         <version>7.0.0-SNAPSHOT</version>
+        <relativePath>../activiti-core-dependencies</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>activiti-spring-process-extensions</artifactId>
