--- a/activiti-api-impl/pom.xml
+++ b/activiti-api-impl/pom.xml
@@ -4,8 +4,9 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.activiti</groupId>
-    <artifactId>activiti-root</artifactId>
+    <artifactId>activiti-core-dependencies</artifactId>
     <version>7.0.0-SNAPSHOT</version>
+    <relativePath>../activiti-core-dependencies</relativePath>
   </parent>
   <artifactId>activiti-api-impl</artifactId>
   <name>Activiti :: Runtime API Parent</name>
