--- a/activiti-json-converter/pom.xml
+++ b/activiti-json-converter/pom.xml
@@ -5,8 +5,9 @@
 
   <parent>
     <groupId>org.activiti</groupId>
-    <artifactId>activiti-root</artifactId>
+    <artifactId>activiti-core-dependencies</artifactId>
     <version>7.0.0-SNAPSHOT</version>
+    <relativePath>../activiti-core-dependencies</relativePath>
   </parent>
 
   <artifactId>activiti-json-converter</artifactId>
