--- a/activiti-spring-app-process/pom.xml
+++ b/activiti-spring-app-process/pom.xml
@@ -20,8 +20,9 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.activiti</groupId>
-    <artifactId>activiti-root</artifactId>
+    <artifactId>activiti-core-dependencies</artifactId>
     <version>7.0.0-SNAPSHOT</version>
+    <relativePath>../activiti-core-dependencies</relativePath>
   </parent>
   <artifactId>activiti-spring-app-process</artifactId>
   <name>Activiti :: Application</name>
