fix: (updatebot) push version into activiti-core via single pr

--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -7,3 +7,6 @@ github:
       useSinglePullRequest: true 
     - name: activiti-core-common
       branch: develop
+    - name: activiti
+      branch: develop
+      useSinglePullRequest: true 
