--- a/.mergify.yml
+++ b/.mergify.yml
@@ -9,5 +9,17 @@ pull_request_rules:
     actions:
       delete_head_branch: {}
       merge:
+        method: merge
+        strict: true
+  - name: automatic merge when CI passes and 1 approving reviews
+    conditions:
+      - "#approved-reviews-by>=1"
+      - status-success=continuous-integration/jenkins/pr-head
+      - status-success=continuous-integration/travis-ci/pr
+      - status-success=continuous-integration/travis-ci/push
+      - status-success=license/cla
+    actions:
+      delete_head_branch: {}
+      merge:
         method: squash
         strict: true
