--- a/activiti-api-process-runtime/pom.xml
+++ b/activiti-api-process-runtime/pom.xml
@@ -4,8 +4,9 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.activiti.api</groupId>
-    <artifactId>activiti-api</artifactId>
+    <artifactId>activiti-api-dependencies</artifactId>
     <version>7.0.0-SNAPSHOT</version>
+    <relativePath>../activiti-api-dependencies</relativePath>
   </parent>
   <artifactId>activiti-api-process-runtime</artifactId>
   <name>Activiti API :: Process Runtime</name>
