fix: (updatebot) push to all repos via  single pull request

--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -4,10 +4,13 @@ github:
     repositories:
     - name: activiti-api
       branch: develop
+      useSinglePullRequest: true
     - name: activiti-core-common
       branch: develop      
+      useSinglePullRequest: true
     - name: activiti
       branch: develop
+      useSinglePullRequest: true
     - name: activiti-dependencies
       branch: develop
       useSinglePullRequest: true
