--- a/activiti-api-dependencies-tests/pom.xml
+++ b/activiti-api-dependencies-tests/pom.xml
@@ -12,6 +12,7 @@
   
   <properties>
     <maven.deploy.skip>true</maven.deploy.skip>
+    <enforceFail>true</enforceFail>    
   </properties>
   <!-- Import managed dependencies from activiti-build with SB dependency management -->
   <!-- as we only need to enforce dependencies between Activiti modules-->
@@ -97,7 +98,7 @@
               <goal>enforce</goal>
             </goals>
             <configuration>
-              <fail>true</fail>
+              <fail>${enforceFail}</fail>
               <rules>
                 <reactorModuleConvergence>
                   <message>The reactor is not valid</message>
