--- a/activiti-core-dependencies-tests/pom.xml
+++ b/activiti-core-dependencies-tests/pom.xml
@@ -14,6 +14,7 @@
 
   <properties>
     <maven.deploy.skip>true</maven.deploy.skip>
+    <enforceFail>true</enforceFail>    
   </properties>
 
   <dependencyManagement>
@@ -137,7 +138,7 @@
               <goal>enforce</goal>
             </goals>
             <configuration>
-              <fail>true</fail>
+              <fail>${enforceFail}</fail>
               <rules>
                 <reactorModuleConvergence>
                   <message>The reactor is not valid</message>
