--- a/.mergify.yml
+++ b/.mergify.yml
@@ -6,6 +6,7 @@ pull_request_rules:
       - status-success=continuous-integration/travis-ci/pr
       - status-success=continuous-integration/travis-ci/push
       - status-success=license/cla
+      - label!=do-not-merge      
     actions:
       delete_head_branch: {}
       merge:
@@ -18,8 +19,6 @@ pull_request_rules:
       - status-success=continuous-integration/travis-ci/pr
       - status-success=continuous-integration/travis-ci/push
       - status-success=license/cla
-      - base=develop
-      - label=ready-to-merge
     actions:
       delete_head_branch: {}
       merge:
